@@ -1,3 +1,7 @@
+2008-01-27  Ales Hakl  <ales at hakl dot net>
+
+	* lib/extref.c: External references
+
 2008-01-17  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c (dfsch_empty_list_type): empty-list type
